# fashion-mnist-classification

./: .gitignore  CNNs.ipynb  CODE_OF_CONDUCT.md  LICENSE  MLPs.ipynb  README.md  ResNet.ipynb  code.ipynb  draft.ipynb  pyproject.toml
hparam-tuning/cnn/: oracle.json
hparam-tuning/cnn/trial_005c824d40fb13be3f4b4d96215c8335/: trial.json
hparam-tuning/cnn/trial_0083800188246d0c68eab125ca114841/: trial.json
hparam-tuning/cnn/trial_008eea1068cab67627fe6198a7e7c6db/: trial.json
hparam-tuning/cnn/trial_00a73d520d046e3156dd556003820f6c/: trial.json
hparam-tuning/cnn/trial_07f56de5c9091831de0c497f3bbec9d7/: trial.json
hparam-tuning/cnn/trial_07f5f1008982f1cdb4f0598d902c7133/: trial.json
hparam-tuning/cnn/trial_0c26a5eb4079d3160f4d674a8153220c/: trial.json
hparam-tuning/cnn/trial_0e9c8a26b96e5ca7b8ebc12471b79ca8/: trial.json
hparam-tuning/cnn/trial_1283fe575a6d53148e822c38cd1f0c0e/: trial.json
hparam-tuning/cnn/trial_163588738c88df3ad5569fa9c0674d61/: trial.json
hparam-tuning/cnn/trial_17bba3089f9c4c0fe74fd903c01ce9b7/: trial.json
hparam-tuning/cnn/trial_1b56d7d292beebc85ea074ab6642e3c4/: trial.json
hparam-tuning/cnn/trial_1baaad8c40046791dd7f91737c740bc6/: trial.json
hparam-tuning/cnn/trial_1c28c19c6f57eb7eda78c8e58305f779/: trial.json
hparam-tuning/cnn/trial_25930e1f3e6c3ca2058acf2ba4654eae/: trial.json
hparam-tuning/cnn/trial_25ab296def7a1d34307025072bbf4f64/: trial.json
hparam-tuning/cnn/trial_25c1f222a010b8200ba72685ce8de3c0/: trial.json
hparam-tuning/cnn/trial_27be1ae122617cc101b6b3f311fa36c7/: trial.json
hparam-tuning/mlp/: oracle.json
(+472 files in other folders)
