[tool.poetry]
name = "fashion-mnist-classification"
version = "0.1.0"
description = "Using MLPs and CNNs to classify Fashion-MNIST items."
authors = ["Silva Ndoja <silvandoja1@gmail.com>", "Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
notebook = "^6.4.8"
black-nb = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
